--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.16.2",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.16.2",
