--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.16.2",
+    "remix-flat-routes": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.16.2",
     "typescript": "^5.1.6",
