--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
+    "host": "remix vite:dev --host",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
@@ -17,22 +18,27 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@mdxeditor/editor": "^3.9.2",
     "@node-rs/bcrypt": "^1.10.4",
     "@prisma/client": "^5.16.2",
     "@remix-run/node": "^2.10.2",
     "@remix-run/react": "^2.10.2",
     "@remix-run/serve": "^2.10.2",
     "isbot": "^4.1.0",
+    "marked": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
+    "remix-utils": "^7.6.0",
     "tiny-invariant": "^1.3.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@prismatools/console": "^1.1.0",
     "@remix-run/dev": "^2.10.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -50,6 +56,7 @@
     "prisma": "^5.16.2",
     "remix-flat-routes": "^0.6.5",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-scoped-preflight": "^3.3.0",
     "tsx": "^4.16.2",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
