--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "host": "remix vite:dev --host",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc",
-    "data-migration:add-user-role": "tsx ./prisma/migrations/20240728074759_add_user_role/data-migration.ts"
+    "typecheck": "tsc"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
