--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tsx": "^4.16.2",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
+    "vite-bundle-visualizer": "^1.2.1",
     "vite-tsconfig-paths": "^4.2.1"
   }
 }
