--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-utils": "^7.6.0",
+    "slugify": "^1.6.6",
     "tiny-invariant": "^1.3.3",
     "zod": "^3.23.8"
   },
