--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@mdxeditor/editor": "^3.10.1",
     "@node-rs/bcrypt": "^1.10.4",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.17.0",
     "@remix-run/node": "^2.10.3",
     "@remix-run/react": "^2.10.3",
