--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "dependencies": {
     "@mdxeditor/editor": "^3.10.1",
-    "@node-rs/bcrypt": "^1.10.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.17.0",
     "@remix-run/node": "^2.10.3",
     "@remix-run/react": "^2.10.3",
     "@remix-run/serve": "^2.10.3",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "isbot": "^5.1.13",
     "marked": "^13.0.3",
     "react": "^18.3.1",
