--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@mdxeditor/editor": "^3.10.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.17.0",
-    "@remix-run/node": "2.10.3",
-    "@remix-run/react": "2.10.3",
-    "@remix-run/serve": "2.10.3",
+    "@remix-run/node": "^2.11.1",
+    "@remix-run/react": "^2.11.1",
+    "@remix-run/serve": "^2.11.1",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "isbot": "^5.1.14",
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@prismatools/console": "^1.1.0",
-    "@remix-run/dev": "2.10.3",
+    "@remix-run/dev": "^2.11.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.3.3",
