--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "isbot": "^5.1.14",
     "marked": "^13.0.3",
+    "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remix-auth": "^3.7.0",
@@ -42,6 +43,7 @@
     "@remix-run/dev": "^2.11.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
