--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
+    "remix-toast": "^1.2.1",
     "remix-utils": "^7.6.0",
     "slugify": "^1.6.6",
     "tiny-invariant": "^1.3.3",
