--- a/package.json
+++ b/package.json
@@ -27,17 +27,22 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "isbot": "^5.1.14",
-    "marked": "^13.0.3",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "rehype-external-links": "^3.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-toast": "^1.2.1",
     "remix-utils": "^7.6.0",
     "slugify": "^1.6.6",
     "tiny-invariant": "^1.3.3",
+    "unified": "^11.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
