--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "isbot": "^5.1.17",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -46,8 +47,9 @@
     "@remix-run/dev": "^2.11.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.14",
+    "@types/lodash": "^4.17.7",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
@@ -67,7 +69,7 @@
     "tailwindcss-scoped-preflight": "^3.4.3",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4",
-    "vite": "^5.4.1",
+    "vite": "^5.4.2",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-tsconfig-paths": "^5.0.1"
   },
