--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "isbot": "^5.1.17",
-    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,6 +39,7 @@
     "slugify": "^1.6.6",
     "tiny-invariant": "^1.3.3",
     "unified": "^11.0.5",
+    "use-debounce": "^10.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -47,7 +47,6 @@
     "@remix-run/dev": "^2.11.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.14",
-    "@types/lodash": "^4.17.7",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
