Add basic Telegram bot for notifications

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL="postgresql://<USERNAME>:<PASSWORD>@<SERVER>:<PORT>/<DATABASENAME>?schema=<SCHEMA>"
-SESSION_SECRET="<SESSIONSECRET>"
+SESSION_SECRET="<SECRET>"
+TELEGRAM_BOT_TOKEN="<TOKEN>"
+TELEGRAM_CHAT_ID="<ID>"
