--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
+    "@sentry/remix": "^8.31.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "grammy": "^1.30.0",
@@ -46,10 +47,11 @@
   "devDependencies": {
     "@prismatools/console": "^1.1.0",
     "@remix-run/dev": "^2.12.1",
+    "@sentry/vite-plugin": "^2.22.4",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.3.8",
+    "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
@@ -65,11 +67,11 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^5.19.1",
     "remix-flat-routes": "^0.6.5",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-scoped-preflight": "^3.4.4",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
-    "vite": "^5.4.6",
+    "vite": "^5.4.7",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-tsconfig-paths": "^5.0.1"
   },
