--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DATABASE_URL="postgresql://<USERNAME>:<PASSWORD>@<SERVER>:<PORT>/<DATABASENAME>?schema=<SCHEMA>"
 SESSION_SECRET="<SECRET>"
 SENTRY_AUTH_TOKEN="<TOKEN>"
-SENTRY_DSN="<DSN>"
 SENTRY_ORG="<ORG>"
 SENTRY_PROJECT="<PROJECT>"
 TELEGRAM_BOT_TOKEN="<TOKEN>"
 TELEGRAM_CHAT_ID="<ID>"
+VITE_SENTRY_DSN="<DSN>"
