Prototype of B2S3 implementation for Event CoverImages

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
-DATABASE_URL="postgresql://<USERNAME>:<PASSWORD>@<SERVER>:<PORT>/<DATABASENAME>?schema=<SCHEMA>"
-SESSION_SECRET="<SECRET>"
-SENTRY_AUTH_TOKEN="<TOKEN>"
-SENTRY_ORG="<ORG>"
-SENTRY_PROJECT="<PROJECT>"
-TELEGRAM_BOT_TOKEN="<TOKEN>"
-TELEGRAM_CHAT_ID="<ID>"
-VITE_SENTRY_DSN="<DSN>"
+B2_APP_KEY_ID=""
+B2_APP_KEY=""
+B2_BUCKET_ID=""
+B2_BUCKET_NAME=""
+B2_SERVER_ENDPOINT=""
+B2_SERVER_REGION=""
+CF_ACCOUNT_HASH=""
+DATABASE_URL=""
+SENTRY_AUTH_TOKEN=""
+SENTRY_DSN=""
+SENTRY_ORG=""
+SENTRY_PROJECT=""
+SESSION_SECRET=""
+TELEGRAM_BOT_TOKEN=""
+TELEGRAM_CHAT_ID=""
+VITE_B2_BUCKET_NAME=""
+VITE_B2_SERVER_ENDPOINT=""
+VITE_SENTRY_DSN=""
