--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.663.0",
     "@mdxeditor/editor": "^3.11.5",
     "@prisma/client": "^5.20.0",
     "@remix-run/node": "^2.12.1",
