Serve from CF CDN

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ B2_APP_KEY_ID=""
 B2_APP_KEY=""
 B2_BUCKET_ID=""
 B2_BUCKET_NAME=""
+B2_CDN_ALIAS=""
 B2_SERVER_ENDPOINT=""
 B2_SERVER_REGION=""
-CF_ACCOUNT_HASH=""
 DATABASE_URL=""
 SENTRY_AUTH_TOKEN=""
 SENTRY_DSN=""
@@ -14,5 +14,6 @@ SESSION_SECRET=""
 TELEGRAM_BOT_TOKEN=""
 TELEGRAM_CHAT_ID=""
 VITE_B2_BUCKET_NAME=""
+VITE_B2_CDN_ALIAS=""
 VITE_B2_SERVER_ENDPOINT=""
 VITE_SENTRY_DSN=""
