--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "grammy": "^1.30.0",
     "isbot": "^5.1.17",
+    "nanoid": "^5.0.7",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -39,6 +40,7 @@
     "remix-auth-form": "^1.5.0",
     "remix-toast": "^1.2.2",
     "remix-utils": "^7.7.0",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "tiny-invariant": "^1.3.3",
     "unified": "^11.0.5",
