Add images to events list + blurhash

--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@remix-run/serve": "^2.12.1",
     "@sentry/remix": "^8.33.1",
     "@types/bcryptjs": "^2.4.6",
+    "@unpic/placeholder": "^0.1.2",
+    "@unpic/react": "^0.1.14",
     "bcryptjs": "^2.4.3",
+    "blurhash": "^2.0.5",
     "grammy": "^1.30.0",
     "isbot": "^5.1.17",
     "nanoid": "^5.0.7",
