--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.685.0",
-    "@mdxeditor/editor": "^3.15.0",
-    "@prisma/client": "^5.21.1",
-    "@remix-run/node": "^2.13.1",
-    "@remix-run/react": "^2.13.1",
-    "@remix-run/serve": "^2.13.1",
-    "@sentry/remix": "^8.36.0",
+    "@aws-sdk/client-s3": "^3.705.0",
+    "@mdxeditor/editor": "^3.20.0",
+    "@prisma/client": "^6.0.1",
+    "@remix-run/node": "^2.15.0",
+    "@remix-run/react": "^2.15.0",
+    "@remix-run/serve": "^2.15.0",
+    "@sentry/remix": "^8.42.0",
     "@types/bcryptjs": "^2.4.6",
     "@unpic/placeholder": "^0.1.2",
-    "@unpic/react": "^0.1.14",
+    "@unpic/react": "^0.1.15",
     "bcryptjs": "^2.4.3",
     "blurhash": "^2.0.5",
-    "grammy": "^1.31.0",
+    "grammy": "^1.33.0",
     "isbot": "^5.1.17",
-    "nanoid": "^5.0.8",
+    "nanoid": "^5.0.9",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -52,36 +52,38 @@
   },
   "devDependencies": {
     "@prismatools/console": "^1.1.0",
-    "@remix-run/dev": "^2.13.1",
-    "@sentry/vite-plugin": "^2.22.6",
+    "@remix-run/dev": "^2.15.0",
+    "@remix-run/route-config": "^2.15.0",
+    "@remix-run/routes-option-adapter": "^2.15.0",
+    "@sentry/vite-plugin": "^2.22.7",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.2",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "prisma": "^5.21.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prisma": "^6.0.1",
     "remix-flat-routes": "^0.6.5",
-    "tailwindcss": "^3.4.14",
-    "tailwindcss-scoped-preflight": "^3.4.5",
+    "tailwindcss": "^3.4.16",
+    "tailwindcss-scoped-preflight": "^3.4.9",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
     "vite-bundle-visualizer": "^1.2.1",
-    "vite-tsconfig-paths": "^5.1.0"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=22.12.0"
   }
 }
